[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://art/gameover.wav" type="AudioStream" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -15.8612, 11.0371, 0, 0, 0, 0, 468.674, 6.37808, 0, 0, 0, 0, 491.969, 705.226, 0, 0, 0, 0, -11.2023, 695.908, 0, 0, 0, 0, -15.8612, 15.6961 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1.70602, 3.56798, 0, 0, 0, 0, 240.557, -6.27914, 0, 0, 0, 0, 482.263, 3.26522, 0, 0, 0, 0, 480.489, 729.458, 0, 0, 0, 0, 0.794434, 732.118, 0, 0, 0, 0, 1.97066, 3.83263, 0, 0, 0, 0, 492.599, 735.804, 0, 0, 0, 0, 493.731, 731.953, 0, 0, 0, 0, 487.31, 733.18, 0, 0, 0, 0, 7.43372, 11.0371, 0, 0, 0, 0, -1.88428, 6.37808 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 240, 450 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 2, 2 )

[node name="Background" type="ColorRect" parent="Player"]
show_behind_parent = true
margin_left = -550.149
margin_top = -859.988
margin_right = 249.851
margin_bottom = -59.9875
rect_scale = Vector2( 1.32947, 1.79415 )
color = Color( 0.253451, 0.425288, 0.429412, 1 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MobPath2" type="Path2D" parent="."]
position = Vector2( -250, -400 )
scale = Vector2( 2, 2 )
curve = SubResource( 1 )

[node name="MobSpawnLocation2" type="PathFollow2D" parent="MobPath2"]
position = Vector2( -15.8612, 11.0371 )
rotation = -0.00961559

[node name="MobPath" type="Path2D" parent="."]
visible = false
curve = SubResource( 2 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
visible = false
position = Vector2( 1.70602, 3.56798 )
rotation = -0.0412037

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -8.0

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
